# DSAN6000-A04

./: .gitignore  README.md  anomalies.csv  compression_type.txt  ls.txt  measurement_correlations.csv  metadata.ipynb  metadata.json  pyproject.toml  quazyilx_advanced_duckdb.ipynb  quazyilx_duckdb.ipynb  quazylix_polars.ipynb  readings_per_hour.csv  time_ma_volatility.csv  time_patterns.csv
