[project]
name = "assignment-polars-duckdb"
version = "0.1.0"
description = "Assignment on Parquet, Polars and DuckDB"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "polars",
    "duckdb",
    "jupyter",
    "ipykernel",
    "notebook",
    "pyarrow",
    "s3fs",
    "matplotlib",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
    "mypy",
    "ipython",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = [
    "*.py",
    "*.ipynb",
    "*.csv",
    "*.json",
    "*.md"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

